welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
		if (getCouleurSol()=="Color.green") {
                ^